@@ -1,3 +1,11 @@
+Fri Aug 01 22:16:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimNotify.cpp:
+	* src/QGaimNotify.h:
+	* src/main.cpp:
+	* gaim.pro:
+	  - Added the notification UI.
+
 Fri Aug 01 21:25:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvButton.cpp:
